[package]
name = "kvserver_rust_part_6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1.19", features = ["full"] }
tokio-util = {version = "0.7", features = ["codec"]}
serde = { version = "1", features = ["derive"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
bytes = "1"
prost = "0.11"
clap = {version = "3.1", features = ["derive"]}
dashmap = "5"
rocksdb = "0.16"
yamux = "0.10"
tracing-appender = "0.1"
tracing-opentelemetry = "0.15"
opentelemetry-jaeger = "0.15"

[build-dependencies]
prost-build = "0.11"


